--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -13,5 +13,6 @@ rpm_setup_config  = {{ kolla_rpm_setup_config |join(',') }}
 tag               = {{ kolla_tag }}
 template_only     = {{ kolla_template_only }}
 template_override = {{ kolla_template_override }}
+template_override = {{ kolla_tmpdir }}/template-overrides.j2
 threads           = {{ kolla_threads }}
 timeout           = {{ kolla_timeout }}
