Default skip_existing to true
skip_existing makes it so kolla-build doesn't try to rebuild existing
containers.
This is especially useful in our case, we're building each children
container one at a time and we're not interested in even attempting to
rebuild a parent layer that already exists.

Change-Id: I3204945aa0635d93631f6cf120c425abfb60bb0e

--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -10,6 +10,7 @@ namespace         = {{ kolla_namespace }}
 registry          = {{ kolla_registry }}
 retries           = {{ kolla_retries }}
 rpm_setup_config  = {{ kolla_rpm_setup_config |join(',') }}
+skip_existing     = {{ kolla_skip_existing }}
 tag               = {{ kolla_tag }}
 template_only     = {{ kolla_template_only }}
 template_override = {{ kolla_template_override }}
