Move from granular builds to concurrent native kolla-build
It turns out that we aren't able to get good performance when
trying to build each image individually -- and even with asynchronous
concurrent builds, threads would be likely to step on each others' toes.

Let's give up on that and leave the concurrency and threading up to
kolla-build itself. Logs for each individual container build is available
in the tmpdir.

This also means we're ditching the mechanism where we can inspect a remote
registry before trying to build. This is not so much an issue if we're
no longer suffering from performance problems.

Change-Id: I667fc680b7da9431318314acafe0be3464aa05d2

--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -17,3 +17,15 @@ template_override = {{ kolla_template_override }}
 template_override = {{ kolla_tmpdir }}/template-overrides.j2
 threads           = {{ kolla_threads }}
 timeout           = {{ kolla_timeout }}
+
+[profiles]
+tripleo_default = {{ tripleo_default_images | join(',') }}
+
+{% if kolla_rdo_images %}
+    {% if kolla_rdo_images is iterable and kolla_rdo_images is not string %}
+        {% set tripleo_custom_images = kolla_rdo_images %}
+    {% else %}
+        {% set tripleo_custom_images = kolla_rdo_images.split(',') | default('') %}
+    {% endif %}
+tripleo_custom = {{ tripleo_custom_images | join(',') }}
+{% endif %}
