Use kolla-build.conf to specify profile and push
This cleans up the kolla-build tasks a little, and allows the switch
from kolla-build to "openstack overcloud container image build"

Change-Id: I5e5e04d991cd654126a75267e07c9095710d8b37

--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -17,6 +17,8 @@ template_override = {{ kolla_template_override }}
 template_override = {{ kolla_tmpdir }}/template-overrides.j2
 threads           = {{ kolla_threads }}
 timeout           = {{ kolla_timeout }}
+push              = {{ kolla_push }}
+profile           = {{ build_profile }}
 
 [profiles]
 tripleo_default = {{ tripleo_default_images | join(',') }}
