--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -16,6 +16,7 @@ template_only     = {{ kolla_template_only }}
 template_override = {{ kolla_template_override }}
 template_override = {{ kolla_tmpdir }}/template-overrides.j2
 threads           = {{ kolla_threads }}
+push_threads      = {{ kolla_threads }}
 timeout           = {{ kolla_timeout }}
 
 [profiles]
