WIP: Stop tagging things by default
Push with the version_hash to avoid collision (i.e, concurrent job
pushing to 'latest' or 'tripleo-ci-testing'), we'll tag "kolla_tag"
elsewhere with tag-promotion.yml.

Change-Id: I8de22830c96053362843c2532a1ad27aba50784f

--- a/templates/kolla-build.conf.j2
+++ b/templates/kolla-build.conf.j2
@@ -11,7 +11,7 @@ registry          = {{ kolla_registry }}
 retries           = {{ kolla_retries }}
 rpm_setup_config  = {{ kolla_rpm_setup_config |join(',') }}
 skip_existing     = {{ kolla_skip_existing }}
-tag               = {{ kolla_tag }}
+tag               = {{ version_hash }}
 template_only     = {{ kolla_template_only }}
 template_override = {{ kolla_template_override }}
 template_override = {{ kolla_tmpdir }}/template-overrides.j2
